Clean field date and add folder datasets to .gitignore

--- a/First Clean.ipynb
+++ b/First Clean.ipynb
@@ -32,7 +32,6 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "from datetime import datetime, timedelta"
    ]
   },
@@ -53,7 +52,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\david\\AppData\\Local\\Temp\\ipykernel_4128\\314274624.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\david\\AppData\\Local\\Temp\\ipykernel_5892\\314274624.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df0 = pd.read_csv(\"datasets/Data2019_PostalCodes-blinded.csv\")##,dtype={\"Requested Pickup Time\": 'string',\"Origin Postal code\": 'string','Destination Postal code':'string'})\n"
      ]
     }
@@ -144,15 +143,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[['Origin Postal code','Destination Postal code']].head(10)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -162,16 +152,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         L9C 5W5\n",
+       "1         L8M 1W9\n",
+       "2         L9C 5H2\n",
+       "3         L9G 0C1\n",
+       "4         L9H 3R6\n",
+       "           ...   \n",
+       "806707     L8G5E4\n",
+       "806708     L9B1K3\n",
+       "806709     L8L2K1\n",
+       "806710        NaN\n",
+       "806711        NaN\n",
+       "Name: Origin Postal code, Length: 806712, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['Origin Postal code']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,11 +231,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Origin Postal code</th>\n",
+       "      <th>Origin1</th>\n",
+       "      <th>Origin2</th>\n",
+       "      <th>Destination Postal code</th>\n",
+       "      <th>Destination1</th>\n",
+       "      <th>Destination2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>L9C 5W5</td>\n",
+       "      <td>L9C</td>\n",
+       "      <td>5W5</td>\n",
+       "      <td>L8M 1W9</td>\n",
+       "      <td>L8M</td>\n",
+       "      <td>1W9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>L8M 1W9</td>\n",
+       "      <td>L8M</td>\n",
+       "      <td>1W9</td>\n",
+       "      <td>L9C 5W5</td>\n",
+       "      <td>L9C</td>\n",
+       "      <td>5W5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>L9C 5H2</td>\n",
+       "      <td>L9C</td>\n",
+       "      <td>5H2</td>\n",
+       "      <td>L8M 1W9</td>\n",
+       "      <td>L8M</td>\n",
+       "      <td>1W9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>L9G 0C1</td>\n",
+       "      <td>L9G</td>\n",
+       "      <td>0C1</td>\n",
+       "      <td>L8M 1W9</td>\n",
+       "      <td>L8M</td>\n",
+       "      <td>1W9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>L9H 3R6</td>\n",
+       "      <td>L9H</td>\n",
+       "      <td>3R6</td>\n",
+       "      <td>L9H 3B7</td>\n",
+       "      <td>L9H</td>\n",
+       "      <td>3B7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>LOR 1W0</td>\n",
+       "      <td>LOR</td>\n",
+       "      <td>1W0</td>\n",
+       "      <td>L9C 5E3</td>\n",
+       "      <td>L9C</td>\n",
+       "      <td>5E3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>L9C 5E3</td>\n",
+       "      <td>L9C</td>\n",
+       "      <td>5E3</td>\n",
+       "      <td>LOR 1W0</td>\n",
+       "      <td>LOR</td>\n",
+       "      <td>1W0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>L8V 2N7</td>\n",
+       "      <td>L8V</td>\n",
+       "      <td>2N7</td>\n",
+       "      <td>L8M 1W9</td>\n",
+       "      <td>L8M</td>\n",
+       "      <td>1W9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>L8M 1W9</td>\n",
+       "      <td>L8M</td>\n",
+       "      <td>1W9</td>\n",
+       "      <td>L8V 2N7</td>\n",
+       "      <td>L8V</td>\n",
+       "      <td>2N7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>L9A 3V1</td>\n",
+       "      <td>L9A</td>\n",
+       "      <td>3V1</td>\n",
+       "      <td>L8M 1W9</td>\n",
+       "      <td>L8M</td>\n",
+       "      <td>1W9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Origin Postal code Origin1 Origin2 Destination Postal code Destination1  \\\n",
+       "0            L9C 5W5     L9C     5W5                 L8M 1W9          L8M   \n",
+       "1            L8M 1W9     L8M     1W9                 L9C 5W5          L9C   \n",
+       "2            L9C 5H2     L9C     5H2                 L8M 1W9          L8M   \n",
+       "3            L9G 0C1     L9G     0C1                 L8M 1W9          L8M   \n",
+       "4            L9H 3R6     L9H     3R6                 L9H 3B7          L9H   \n",
+       "5            LOR 1W0     LOR     1W0                 L9C 5E3          L9C   \n",
+       "6            L9C 5E3     L9C     5E3                 LOR 1W0          LOR   \n",
+       "7            L8V 2N7     L8V     2N7                 L8M 1W9          L8M   \n",
+       "8            L8M 1W9     L8M     1W9                 L8V 2N7          L8V   \n",
+       "9            L9A 3V1     L9A     3V1                 L8M 1W9          L8M   \n",
+       "\n",
+       "  Destination2  \n",
+       "0          1W9  \n",
+       "1          5W5  \n",
+       "2          1W9  \n",
+       "3          1W9  \n",
+       "4          3B7  \n",
+       "5          5E3  \n",
+       "6          1W0  \n",
+       "7          1W9  \n",
+       "8          2N7  \n",
+       "9          1W9  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['Origin Postal code','Origin1', 'Origin2','Destination Postal code','Destination1', 'Destination2']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[['Origin Postal code','Origin1', 'Origin2','Destination Postal code','Destination1', 'Destination2']].head(10)"
+    "df.to_csv('datasets/data_clean1NO2019.csv', index = False)"
    ]
   },
   {
@@ -232,21 +408,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('datasets/data_clean1NO.csv', index = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df[['Origin Postal code', 'Origin2', 'Destination Postal code','Destination2']] = pd.DataFrame(data=np.nan, index=df.index, columns=['Origin Postal code', 'Origin2', 'Destination Postal code', 'Destination2'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +566,7 @@
        "9           NaN  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,11 +577,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('datasets/data_clean1_publish.csv', index = False)"
+    "df.to_csv('datasets/data_clean1_2019.csv', index = False)"
    ]
   }
  ],
