--- a/Second Clean.ipynb
+++ b/Second Clean.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\david\\AppData\\Local\\Temp\\ipykernel_14700\\4121937686.py:3: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\david\\AppData\\Local\\Temp\\ipykernel_32780\\4121937686.py:3: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df0 = pd.read_csv(\"datasets/data_clean1NO2019.csv\")\n"
      ]
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "Name: Date, Length: 806712, dtype: object"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "Name: Date, Length: 806712, dtype: object"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "False"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "(123689, 20)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
        "[123689 rows x 20 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
        "[123689 rows x 20 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
        "[806712 rows x 5 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1519,7 @@
        "[806712 rows x 5 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1885,30 +1885,30 @@
      "output_type": "stream",
      "text": [
       "False    806712\n",
-      "Name: Origin Postal code, dtype: int64\n",
-      "nan        20598\n",
-      "L8G 5E4    17886\n",
-      "L8N 4A6    17482\n",
-      "L9H 5G7    12547\n",
-      "L8L 3B1     9630\n",
+      "Name: Destination Postal code, dtype: int64\n",
+      "nan        21748\n",
+      "L8G 5E4    19357\n",
+      "L8N 4A6    18801\n",
+      "L9H 5G7    12266\n",
+      "L8R 1Y6     9637\n",
       "           ...  \n",
-      "L8K 4M9        1\n",
-      "L8E 5L2        1\n",
-      "L8P 1N3        1\n",
-      "L8W 3S2        1\n",
-      "L8V 3L1        1\n",
-      "Name: Origin Postal code, Length: 5401, dtype: int64\n"
+      "L8B 1J3        1\n",
+      "L9A 4J3        1\n",
+      "L9A 2K4        1\n",
+      "L8W 3M9        1\n",
+      "L9H 5P8        1\n",
+      "Name: Destination Postal code, Length: 5587, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "print(df['Origin Postal code'].isnull().value_counts())\n",
-    "print(df['Origin Postal code'].value_counts())"
+    "print(df['Destination Postal code'].isnull().value_counts())\n",
+    "print(df['Destination Postal code'].value_counts())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1968,6 +1968,297 @@
    "source": [
     "print(df['Destination2'].isnull().value_counts())\n",
     "print(df['Destination2'].value_counts())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Postal Code formats\n",
+    "- Origin1\n",
+    "- Origin2\n",
+    "- Destination1\n",
+    "- Destination2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Date', 'Booking ID', 'Requested Pickup Time', 'Week Day', 'Provider',\n",
+       "       'Vehicle Type', 'Run', 'Space Type', 'Ambulatory', 'Origin Postal code',\n",
+       "       'Pickup Arrival Time', 'Pickup Departure Time',\n",
+       "       'Destination Postal code', 'Dropoff Arrival Time',\n",
+       "       'Dropoff Departure Time', 'Trip Count', 'Origin1', 'Origin2',\n",
+       "       'Destination1', 'Destination2'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Origin1 Destination1\n",
+      "0          L9C          L8M\n",
+      "1          L8M          L9C\n",
+      "2          L9C          L8M\n",
+      "3          L9G          L8M\n",
+      "4          L9H          L9H\n",
+      "...        ...          ...\n",
+      "806707     L8G          NaN\n",
+      "806708     L9B          NaN\n",
+      "806709     L8L          NaN\n",
+      "806710     NaN          NaN\n",
+      "806711     NaN          NaN\n",
+      "\n",
+      "[806712 rows x 2 columns]\n",
+      "       Origin2 Destination2\n",
+      "0          5W5          1W9\n",
+      "1          1W9          5W5\n",
+      "2          5H2          1W9\n",
+      "3          0C1          1W9\n",
+      "4          3R6          3B7\n",
+      "...        ...          ...\n",
+      "806707     5E4          NaN\n",
+      "806708     1K3          NaN\n",
+      "806709     2K1          NaN\n",
+      "806710     NaN          NaN\n",
+      "806711     NaN          NaN\n",
+      "\n",
+      "[806712 rows x 2 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "postal_array =['Origin Postal code','Origin1','Origin2','Destination Postal code','Destination1','Destination2']\n",
+    "postal_array1 = ['Origin1','Destination1']\n",
+    "postal_array2 = ['Origin2','Destination2']\n",
+    "print(df[postal_array1])\n",
+    "print(df[postal_array2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define regex patterns to match the format and capture the match (3R6 3B7)\n",
+    "pattern1 = r'^([A-Za-z]\\d[A-Za-z])$'\n",
+    "pattern2 = r'^(\\d[A-Za-z]\\d)$'\n",
+    "# use pandas str.extract method to extract the capture group and return NaN for all other values\n",
+    "for code in postal_array1:\n",
+    "    df[code] = df[code].str.extract(pattern1, expand=False).fillna(np.nan)\n",
+    "\n",
+    "for code in postal_array2:\n",
+    "    df[code] = df[code].str.extract(pattern2, expand=False).fillna(np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Origin Postal code'] = df['Origin1']+df['Origin2']\n",
+    "df['Destination Postal code'] = df['Destination1']+df['Destination2']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Origin Postal code</th>\n",
+       "      <th>Origin1</th>\n",
+       "      <th>Origin2</th>\n",
+       "      <th>Destination Postal code</th>\n",
+       "      <th>Destination1</th>\n",
+       "      <th>Destination2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>L9C5W5</td>\n",
+       "      <td>L9C</td>\n",
+       "      <td>5W5</td>\n",
+       "      <td>L8M1W9</td>\n",
+       "      <td>L8M</td>\n",
+       "      <td>1W9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>L8M1W9</td>\n",
+       "      <td>L8M</td>\n",
+       "      <td>1W9</td>\n",
+       "      <td>L9C5W5</td>\n",
+       "      <td>L9C</td>\n",
+       "      <td>5W5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>L9C5H2</td>\n",
+       "      <td>L9C</td>\n",
+       "      <td>5H2</td>\n",
+       "      <td>L8M1W9</td>\n",
+       "      <td>L8M</td>\n",
+       "      <td>1W9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>L9G0C1</td>\n",
+       "      <td>L9G</td>\n",
+       "      <td>0C1</td>\n",
+       "      <td>L8M1W9</td>\n",
+       "      <td>L8M</td>\n",
+       "      <td>1W9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>L9H3R6</td>\n",
+       "      <td>L9H</td>\n",
+       "      <td>3R6</td>\n",
+       "      <td>L9H3B7</td>\n",
+       "      <td>L9H</td>\n",
+       "      <td>3B7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806707</th>\n",
+       "      <td>L8G5E4</td>\n",
+       "      <td>L8G</td>\n",
+       "      <td>5E4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806708</th>\n",
+       "      <td>L9B1K3</td>\n",
+       "      <td>L9B</td>\n",
+       "      <td>1K3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806709</th>\n",
+       "      <td>L8L2K1</td>\n",
+       "      <td>L8L</td>\n",
+       "      <td>2K1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806710</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806711</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>806712 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Origin Postal code Origin1 Origin2 Destination Postal code  \\\n",
+       "0                  L9C5W5     L9C     5W5                  L8M1W9   \n",
+       "1                  L8M1W9     L8M     1W9                  L9C5W5   \n",
+       "2                  L9C5H2     L9C     5H2                  L8M1W9   \n",
+       "3                  L9G0C1     L9G     0C1                  L8M1W9   \n",
+       "4                  L9H3R6     L9H     3R6                  L9H3B7   \n",
+       "...                   ...     ...     ...                     ...   \n",
+       "806707             L8G5E4     L8G     5E4                     NaN   \n",
+       "806708             L9B1K3     L9B     1K3                     NaN   \n",
+       "806709             L8L2K1     L8L     2K1                     NaN   \n",
+       "806710                NaN     NaN     NaN                     NaN   \n",
+       "806711                NaN     NaN     NaN                     NaN   \n",
+       "\n",
+       "       Destination1 Destination2  \n",
+       "0               L8M          1W9  \n",
+       "1               L9C          5W5  \n",
+       "2               L8M          1W9  \n",
+       "3               L8M          1W9  \n",
+       "4               L9H          3B7  \n",
+       "...             ...          ...  \n",
+       "806707          NaN          NaN  \n",
+       "806708          NaN          NaN  \n",
+       "806709          NaN          NaN  \n",
+       "806710          NaN          NaN  \n",
+       "806711          NaN          NaN  \n",
+       "\n",
+       "[806712 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[postal_array]"
    ]
   },
   {
@@ -2008,6 +2299,23 @@
    "source": [
     "print(df['Trip Count'].isnull().value_counts())\n",
     "print(df['Trip Count'].value_counts())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Export data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('datasets/data_clean2_2019.csv', index = False)"
    ]
   }
  ],
