--- a/Second Clean.ipynb
+++ b/Second Clean.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\david\\AppData\\Local\\Temp\\ipykernel_32780\\4121937686.py:3: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\david\\AppData\\Local\\Temp\\ipykernel_16472\\4121937686.py:3: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df0 = pd.read_csv(\"datasets/data_clean1NO2019.csv\")\n"
      ]
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "Name: Date, Length: 806712, dtype: object"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        "Name: Date, Length: 806712, dtype: object"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "False"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "(123689, 20)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
        "[123689 rows x 20 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
        "[123689 rows x 20 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
        "[806712 rows x 5 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,16 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df0.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1510,7 @@
        "[806712 rows x 5 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1600,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Vehicle Type'] = df['Vehicle Type'].str.lstrip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1618,13 +1618,13 @@
      "text": [
       "False    806712\n",
       "Name: Vehicle Type, dtype: int64\n",
-      " VAN 2WK                          235390\n",
+      "VAN 2WK                           235390\n",
       "HTOWN VAN                         215969\n",
       "MVNSE                             103085\n",
       "DARTS PROMASTER27                  67590\n",
       "DARTS Low Floor Van                48305\n",
       "Low Floor Wide extra seats/OBS     34481\n",
-      " DARTS PROMASTER24                 33751\n",
+      "DARTS PROMASTER24                  33751\n",
       "DARTS SIENNA                       29606\n",
       "DARTS PROMASTER EXTENDED           18855\n",
       "CMARVEL VAN                        13719\n",
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2010,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2075,7 +2075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2085,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2252,7 +2252,7 @@
        "[806712 rows x 6 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2272,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2302,6 +2302,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         2019-01-01\n",
+       "1         2019-01-01\n",
+       "2         2019-01-01\n",
+       "3         2019-01-01\n",
+       "4         2019-01-01\n",
+       "             ...    \n",
+       "806707    2019-12-30\n",
+       "806708    2019-12-30\n",
+       "806709    2019-12-31\n",
+       "806710    2019-07-25\n",
+       "806711    2019-11-07\n",
+       "Name: Date, Length: 806712, dtype: object"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Date']"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -2311,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
