--- a/Data Construction.ipynb
+++ b/Data Construction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\david\\AppData\\Local\\Temp\\ipykernel_29008\\2020476196.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\david\\AppData\\Local\\Temp\\ipykernel_17616\\2020476196.py:1: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df0 = pd.read_csv(\"datasets/data_clean2_2019.csv\")\n"
      ]
     }
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "[806712 rows x 20 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,9 +446,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Requested Pickup Time</th>\n",
+       "      <th>Pickup Arrival Time</th>\n",
+       "      <th>Pickup Departure Time</th>\n",
+       "      <th>Dropoff Arrival Time</th>\n",
+       "      <th>Dropoff Departure Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>09:00</td>\n",
+       "      <td>09:05</td>\n",
+       "      <td>09:06</td>\n",
+       "      <td>09:19</td>\n",
+       "      <td>09:19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13:50</td>\n",
+       "      <td>13:50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12:00</td>\n",
+       "      <td>12:11</td>\n",
+       "      <td>12:14</td>\n",
+       "      <td>12:29</td>\n",
+       "      <td>12:36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10:00</td>\n",
+       "      <td>09:29</td>\n",
+       "      <td>09:31</td>\n",
+       "      <td>09:54</td>\n",
+       "      <td>09:54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>13:00</td>\n",
+       "      <td>12:52</td>\n",
+       "      <td>12:52</td>\n",
+       "      <td>12:52</td>\n",
+       "      <td>12:55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806707</th>\n",
+       "      <td>12:30</td>\n",
+       "      <td>12:29</td>\n",
+       "      <td>12:29</td>\n",
+       "      <td>13:17</td>\n",
+       "      <td>13:18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806708</th>\n",
+       "      <td>12:30</td>\n",
+       "      <td>12:35</td>\n",
+       "      <td>12:38</td>\n",
+       "      <td>12:54</td>\n",
+       "      <td>12:56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806709</th>\n",
+       "      <td>11:00</td>\n",
+       "      <td>10:59</td>\n",
+       "      <td>11:00</td>\n",
+       "      <td>11:17</td>\n",
+       "      <td>11:17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806710</th>\n",
+       "      <td>12:00</td>\n",
+       "      <td>12:05</td>\n",
+       "      <td>12:07</td>\n",
+       "      <td>12:18</td>\n",
+       "      <td>12:19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806711</th>\n",
+       "      <td>14:00</td>\n",
+       "      <td>13:47</td>\n",
+       "      <td>13:48</td>\n",
+       "      <td>14:02</td>\n",
+       "      <td>14:05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>806712 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Requested Pickup Time Pickup Arrival Time Pickup Departure Time  \\\n",
+       "0                      09:00               09:05                 09:06   \n",
+       "1                      14:00                 NaN                   NaN   \n",
+       "2                      12:00               12:11                 12:14   \n",
+       "3                      10:00               09:29                 09:31   \n",
+       "4                      13:00               12:52                 12:52   \n",
+       "...                      ...                 ...                   ...   \n",
+       "806707                 12:30               12:29                 12:29   \n",
+       "806708                 12:30               12:35                 12:38   \n",
+       "806709                 11:00               10:59                 11:00   \n",
+       "806710                 12:00               12:05                 12:07   \n",
+       "806711                 14:00               13:47                 13:48   \n",
+       "\n",
+       "       Dropoff Arrival Time Dropoff Departure Time  \n",
+       "0                     09:19                  09:19  \n",
+       "1                     13:50                  13:50  \n",
+       "2                     12:29                  12:36  \n",
+       "3                     09:54                  09:54  \n",
+       "4                     12:52                  12:55  \n",
+       "...                     ...                    ...  \n",
+       "806707                13:17                  13:18  \n",
+       "806708                12:54                  12:56  \n",
+       "806709                11:17                  11:17  \n",
+       "806710                12:18                  12:19  \n",
+       "806711                14:02                  14:05  \n",
+       "\n",
+       "[806712 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "time_array = ['Requested Pickup Time', 'Pickup Arrival Time', 'Pickup Departure Time', 'Dropoff Arrival Time', 'Dropoff Departure Time']\n",
     "df[time_array]"
@@ -456,14 +613,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Delay']=df['Pickup Arrival Time'] - df['Requested Pickup Time']\n",
-    "df['Board Time']=df['Pickup Departure Time'] - df['Pickup Arrival Time']\n",
-    "df['Travel Time']=df['Dropoff Arrival Time'] -  df['Pickup Departure Time']\n",
-    "df['Unboard Time']=df['Dropoff Departure Time'] - df['Dropoff Departure Time']\n"
+    "# Convert string values to datetime format\n",
+    "df[time_array] = df[time_array].apply(pd.to_datetime)\n",
+    "#df[time_array] = df[time_array].apply(lambda x: pd.to_datetime(x, format='%H:%M'))\n",
+    "\n",
+    "# Format datetime values as HH:MM time format\n",
+    "#df[time_array] = df[time_array].apply(lambda x: x.dt.strftime('%H:%M'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Delay']=(df['Pickup Arrival Time'] - df['Requested Pickup Time']).dt.total_seconds() / 60\n",
+    "df['Board Time']=(df['Pickup Departure Time'] - df['Pickup Arrival Time']).dt.total_seconds() / 60\n",
+    "df['Travel Time']=(df['Dropoff Arrival Time'] -  df['Pickup Departure Time']).dt.total_seconds() / 60\n",
+    "df['Unboard Time']=(df['Dropoff Departure Time'] - df['Dropoff Arrival Time']).dt.total_seconds() / 60"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Delay</th>\n",
+       "      <th>Board Time</th>\n",
+       "      <th>Travel Time</th>\n",
+       "      <th>Unboard Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>755315.000000</td>\n",
+       "      <td>786085.000000</td>\n",
+       "      <td>779079.000000</td>\n",
+       "      <td>786214.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.513122</td>\n",
+       "      <td>3.595293</td>\n",
+       "      <td>19.753684</td>\n",
+       "      <td>2.148003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>13.640628</td>\n",
+       "      <td>11.404810</td>\n",
+       "      <td>35.654872</td>\n",
+       "      <td>12.090120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-100.000000</td>\n",
+       "      <td>-1439.000000</td>\n",
+       "      <td>-1436.000000</td>\n",
+       "      <td>-1439.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-10.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>512.000000</td>\n",
+       "      <td>346.000000</td>\n",
+       "      <td>334.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Delay     Board Time    Travel Time   Unboard Time\n",
+       "count  755315.000000  786085.000000  779079.000000  786214.000000\n",
+       "mean        0.513122       3.595293      19.753684       2.148003\n",
+       "std        13.640628      11.404810      35.654872      12.090120\n",
+       "min      -100.000000   -1439.000000   -1436.000000   -1439.000000\n",
+       "25%       -10.000000       2.000000      10.000000       1.000000\n",
+       "50%         0.000000       3.000000      17.000000       2.000000\n",
+       "75%        10.000000       5.000000      28.000000       3.000000\n",
+       "max       100.000000     512.000000     346.000000     334.000000"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculated_array = ['Delay','Board Time','Travel Time','Unboard Time']\n",
+    "df[calculated_array].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for field in calculated_array:\n",
+    "    df.loc[(df[field]>100)|(df[field]< -100),field] = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Delay</th>\n",
+       "      <th>Board Time</th>\n",
+       "      <th>Travel Time</th>\n",
+       "      <th>Unboard Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>755315.000000</td>\n",
+       "      <td>786085.000000</td>\n",
+       "      <td>779079.000000</td>\n",
+       "      <td>786214.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.513122</td>\n",
+       "      <td>3.647313</td>\n",
+       "      <td>20.490351</td>\n",
+       "      <td>2.240407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>13.640628</td>\n",
+       "      <td>3.887556</td>\n",
+       "      <td>13.551083</td>\n",
+       "      <td>2.784944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-100.000000</td>\n",
+       "      <td>-95.000000</td>\n",
+       "      <td>-90.000000</td>\n",
+       "      <td>-90.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-10.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Delay     Board Time    Travel Time   Unboard Time\n",
+       "count  755315.000000  786085.000000  779079.000000  786214.000000\n",
+       "mean        0.513122       3.647313      20.490351       2.240407\n",
+       "std        13.640628       3.887556      13.551083       2.784944\n",
+       "min      -100.000000     -95.000000     -90.000000     -90.000000\n",
+       "25%       -10.000000       2.000000      10.000000       1.000000\n",
+       "50%         0.000000       3.000000      17.000000       2.000000\n",
+       "75%        10.000000       5.000000      28.000000       3.000000\n",
+       "max       100.000000     100.000000     100.000000      99.000000"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[calculated_array].describe()"
    ]
   },
   {
